<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="manpergut.us.crashapp3.MainActivity">



    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciclo1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciclo2"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="50dp" />/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newView2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newView3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginStart="20dp"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newView1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text" />

</android.support.constraint.ConstraintLayout>
